# pcp

./: .gitignore
qa/: 1211  output_of_1211.txt
src/: .gitignore
src/libpcp_web/src/: GNUmakefile  exports  libuv.c  libuv.h  load.c  query.c  redis.h  schema.c  schema.h  slots.c  slots.h
src/pmproxy/: pmproxy.c
src/pmproxy2/: CMakeCache.txt  CMakeLists.txt  CommandKeys.c  CommandKeys.h  TODO.h  Unixsocket  Unixsocket.c  client.c  cmake_install.cmake  pmproxy2  pmproxy2.c  pmproxy2.cbp  script.sh  temp  temp.c  temp2.c  test.sh
src/pmproxy2/src/: CommandKeys.c  CommandKeys.h  GNUmakefile  build.sh  pmproxy2.c  pmproxy2.h  qa 1327  temp.c
